--- a/builder.toml
+++ b/builder.toml
@@ -1,9 +1,23 @@
 description = "Static base image (Ubuntu Jammy Jellyfish build image, distroless-like run image) with no buildpacks included. To use, specify buildpacks at build time."
 
+[build]
+  image = "docker.io/paketobuildpacks/build-jammy-static:0.0.157"
+
 [lifecycle]
   version = "0.20.14"
 
 [stack]
-  build-image = "docker.io/paketobuildpacks/build-jammy-static:0.0.157"
   id = "io.buildpacks.stacks.jammy.static"
-  run-image = "index.docker.io/paketobuildpacks/run-jammy-static:latest"
+
+[run]
+  [[run.images]]
+    image = "index.docker.io/paketobuildpacks/run-jammy-static:latest"
+
+
+[[targets]]
+  arch = "amd64"
+  os = "linux"
+
+[[targets]]
+  arch = "arm64"
+  os = "linux"
